# SARDash

./: COLAB_INTEGRATION_GUIDE.md  DEPLOY_EASYPANEL.md  Dockerfile  QUICKSTART.md  README.md  api_server.py  app.py  docker-compose.yml  docker-entrypoint.sh  easypanel.yml  pyproject.toml  replit.md  requirements.txt
components/: colab_integration.py  comparison_view.py  insights_dashboard.py  main_dashboard.py  multi_biome_comparison.py  sidebar.py  time_series.py
uploaded_data/: dashboard_data.json
utils/: data_processor.py  map_utils.py  visualization.py
