[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django-sidebar>=0.2.0",
    "folium>=0.20.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "streamlit-folium>=0.25.3",
    "streamlit>=1.50.0",
    "plotly>=6.3.1",
    "geopandas>=1.1.1",
    "scipy>=1.16.2",
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "python-multipart>=0.0.20",
]
